# public/swagger.json
@@ -146,7 +146,13 @@
 				"tags": [
 					"BookCopys"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"read"
+						]
+					}
+				],
 				"parameters": []
 			},
 			"post": {
@@ -166,7 +172,13 @@
 				"tags": [
 					"BookCopys"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"create:bookCopy"
+						]
+					}
+				],
 				"parameters": [],
 				"requestBody": {
 					"required": true,
@@ -198,7 +210,13 @@
 				"tags": [
 					"BookCopys"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"read"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -228,7 +246,13 @@
 				"tags": [
 					"BookCopys"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"update:bookCopy"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -261,7 +285,13 @@
 				"tags": [
 					"BookCopys"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"delete:bookCopy"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -296,7 +326,13 @@
 				"tags": [
 					"Books"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"read"
+						]
+					}
+				],
 				"parameters": []
 			},
 			"post": {
@@ -316,7 +352,13 @@
 				"tags": [
 					"Books"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"create:book"
+						]
+					}
+				],
 				"parameters": [],
 				"requestBody": {
 					"required": true,
@@ -348,7 +390,13 @@
 				"tags": [
 					"Books"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"read"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -378,7 +426,13 @@
 				"tags": [
 					"Books"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"update:book"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -411,7 +465,54 @@
 				"tags": [
 					"Books"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"delete:book"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/books/{id}/book-copies": {
+			"get": {
+				"operationId": "GetBookCopies",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/BookCopyDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Books"
+				],
+				"security": [
+					{
+						"jwt": [
+							"read"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -449,7 +550,6 @@
 				"security": [
 					{
 						"jwt": [
-							"write",
 							"read"
 						]
 					}
@@ -476,8 +576,7 @@
 				"security": [
 					{
 						"jwt": [
-							"write",
-							"read"
+							"create:author"
 						]
 					}
 				],
@@ -515,7 +614,6 @@
 				"security": [
 					{
 						"jwt": [
-							"write",
 							"read"
 						]
 					}
@@ -545,8 +643,7 @@
 				"security": [
 					{
 						"jwt": [
-							"write",
-							"read"
+							"delete:author"
 						]
 					}
 				],
@@ -582,8 +679,7 @@
 				"security": [
 					{
 						"jwt": [
-							"write",
-							"read"
+							"update:author"
 						]
 					}
 				],
@@ -608,6 +704,47 @@
 						}
 					}
 				}
+			}
+		},
+		"/authors/{id}/books": {
+			"get": {
+				"operationId": "GetBooksByAuthor",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/BookDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authors"
+				],
+				"security": [
+					{
+						"jwt": [
+							"read"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		},
 		"/auth": {
