# src/controllers/author.controller.ts
@@ -3,18 +3,21 @@ import { authorService } from "../services/author.service";
 import { AuthorDTO } from "../dto/author.dto";
 import { Author } from "../models/author.model";
 import { CustomError } from "../middlewares/errorHandler";
+import { BookDTO } from "../dto/book.dto";
+import { bookService } from "../services/book.service";
 
 @Route("authors")
 @Tags("Authors")
-@Security("jwt", ["write", "read"])
 export class AuthorController extends Controller {
   // Récupère tous les auteurs
+  @Security("jwt", ["read"])
   @Get("/")
   public async getAllAuthors(): Promise<AuthorDTO[]> {
     return authorService.getAllAuthors();
   }
 
   // Récupère un auteur par ID
+  @Security("jwt", ["read"])
   @Get("{id}")
   public async getAuthorById(@Path() id: number): Promise<AuthorDTO> {
     let author: Author | null = await authorService.getAuthorById(id);
@@ -27,7 +30,15 @@ export class AuthorController extends Controller {
     }
   }
 
+  // Récupère les livres d'un auteur
+  @Security("jwt", ["read"])
+  @Get("{id}/books")
+  public async getBooksByAuthor(@Path() id: number): Promise<BookDTO[]> {
+    return bookService.getBooksByAuthorId(id);
+  }
+
   // Crée un nouvel auteur
+  @Security("jwt", ["create:author"])
   @Post("/")
   public async createAuthor(
     @Body() requestBody: AuthorDTO
@@ -44,6 +55,7 @@ export class AuthorController extends Controller {
   }
 
   // Supprime un auteur par ID
+  @Security("jwt", ["delete:author"])
   @Delete("{id}")
   public async deleteAuthor(@Path() id: number): Promise<void> {
     try {
@@ -57,7 +69,7 @@ export class AuthorController extends Controller {
     }
   }
 
-  // Met à jour un auteur par ID
+  @Security("jwt", ["update:author"])
   @Patch("{id}")
   public async updateAuthor(
     @Path() id: number,
